Fixed another bogus assertion (bug 522569, r=brendan).